<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_cus_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:stretchColumns="1">
            <TableRow
                style="@style/common_tablerow">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/customerName"
                    />

                <EditText
                    android:id="@+id/customerName"
                    style="@style/common_tablerow_edit"
                    android:hint="@string/hint_cus_name"
                    />

                <ImageView
                    android:id="@+id/iv_ocr"
                    android:layout_marginLeft="8dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="gone"/>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/cus_sex"
                    />

                <RadioGroup
                    android:layout_width="128dp"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/rbt_0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="男"
                        android:clickable="false"/>
                    <RadioButton
                        android:id="@+id/rbt_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="女"
                        android:clickable="false"/>
                </RadioGroup>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/certType"
                    />

                <LinearLayout
                    style="@style/common_lay_bg">

                    <Spinner
                        android:id="@+id/certType"
                        style="@style/common_rate_edit"
                        android:enabled="false"
                        android:clickable="false"
                        />
                </LinearLayout>
            </TableRow>

            <TableRow
                style="@style/common_tablerow">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/certNumber"/>

                <EditText
                    android:id="@+id/certNumber"
                    style="@style/common_tablerow_edit"
                    android:hint="@string/hint_cert_num"
                    android:focusable="false"
                    />
            </TableRow>

            <TableRow
                style="@style/common_tablerow">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/certIssuedStart"/>

                <EditText
                    android:id="@+id/cert_issued_start"
                    style="@style/common_tablerow_edit"
                    android:hint="@string/hint_cert_issued_start"
                    />
            </TableRow>
            <TableRow
                style="@style/common_tablerow">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/certIssuedEnd"/>

                <EditText
                    android:id="@+id/cert_issued_end"
                    style="@style/common_tablerow_edit"
                    android:hint="@string/hint_cert_issued_end"
                    />
            </TableRow>

        </TableLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            >

            <Button
                android:id="@+id/read_cert"
                app:layout_widthPercent="45%"
                style="@style/common_open_card_button"
                android:layout_alignParentLeft="true"
                android:text="@string/readCert"
                />
            <Button
                android:id="@+id/seach"
                app:layout_widthPercent="45%"
                android:layout_alignParentRight="true"
                style="@style/common_open_card_button"
                android:text="查询客户号"
                />
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>
</LinearLayout>